--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modern-drawer": "^1.2.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
